<resources>
    <string name="app_name">dishass</string>
    <string name="financename">Financial Assistance for disabled person </string>
    <string name="financecategory">Visually impaired, hearing impaired, orthopedically handicapped</string>
    <string name="financeDesc">Assistance for purchase of appliances to disabled persons as per their age group and disability she will get married incentive</string>
    <string name="financeeligibility">1. Monthly income off the applicant should be less than ₹1500
2. Applicant should have minimum 40% disability
3. Applicant should be domicile in Maharashtra


</string>
    <string name="financebenefits">1. Crutches
2. Tricycle
3. Callipers
4. Wheelchair
</string>
    <string name="financeapply">Application in prescribed form attach with necessary documents.



</string>
    <string name="financedocuments">Domicile Certificate,Proof of identity


</string>
    <string name="finance2name">Financial Assistance to Self-Employment for Trained Disabled Persons</string>
    <string name="finance2category">Visually handicapped, Low vision, hearing impaired, and orthopedically handicapped
</string>
    <string name="finance2Desc">Financial assistance to facilitate purchase of equipment for those disable persons who are completing vocational training from government institutions or recognize institution to start their own business</string>
    <string name="finance2eligibility">1.Application in prescribed format submitted to concern District Social Welfare Office, Zillah Parishad and Assistant Commissioner Social Welfare Office ,Mumbai Urban and Mumbai Suburban
2.Applicant must completed their vocational training in Government or Government recognized institution
3.Applicant should have minimum 40% disability.
3.Applicant should be Domicile in Maharashtra.
4.Applicant should submit their proposal with proposed project cost.
</string>
    <string name="finance2benefits">The State Government of Maharashtra has provided financial assistance of Rs. 1000/- for purchase of total kits/ equipments to start their own business .
</string>
    <string name="finance2apply">Application in prescribed format attached with necessary documents
</string>
    <string name="finance2documents">Proof of Disability,Domicile Certificate
</string>
    <string name="finance3name">Divyangjan Swavalamban Yojana</string>
    <string name="finance3category">NHFDC provides financial assistance in terms of loan to Persons
 with Disabilities for starting any activity contributing directly
 or indirectly in the income generation or helping PwD in their overall process
of empowerment through implementing agencies throughout the country including West Bengal.
</string>
    <string name="finance3Desc">The main objective of the Scheme is to assist the needy disabled persons by providing concessional loan for economic and overall empowerment.</string>
    <string name="finance3eligibility">Any Indian citizen with 40% or more disability and age above 18 years can apply for loan under NHFDC scheme for self employment.
The age criteria would not be required for educational loans.

</string>
    <string name="finance3benefits">NHFDC provides maximum loan upto 50.0 lakh to Persons with disabilities for self-employment activity at the rate of interest 5-9% p.a.
(A rebate of 1% in interest will be allowed to women with disabilities/persons with disabilities other than OH in self employment loans of upto Rs.50,000/-).



</string>
    <string name="finance3apply">Application in the prescribed format is to be submitted to the implementing agency for sanction of loan as per procedure and general terms and conditions as laid down, from time to time, by National Handicapped Finance and Development Corporation.
Rights of NHFDC : In case of any dispute, decision of the CMD, NHFDC will be final and binding
Other Terms and Conditions : Other terms and conditions for the Scheme will be as per the guidelines issued by NHFDC for credit based funding schemes.
</string>
    <string name="finance3documents">Proof of Disability,Domicile Certificate
        for more references, visit: nhfdc.nic.in
</string>
    <string name="finance4name">Vishesh Microfinance Yojana (VMY)  </string>
    <string name="finance4category">Under this scheme NHFDC provides prompt and need based finance for the target group and activities at reasonable rate of interest through NBFC - MFI, Section-8-MFI, and NGO-MFI, SHG Federations, state Government Missions and other state level \

organizations to pursue small/micro business and development activities.</string>
    <string name="finance4Desc">To provide prompt and need based finance for the target group and activities at reasonable
rate of interest through NBFC- MFI, Section-8-MFI, and NGO-MFI, SHG Federations, state
Government Missions and other state level organizations to pursue small/micro business and
developmental activities.</string>
    <string name="finance4eligibility">Eligibility norms as followed by SIDBI or NABARD from time to time, for such categories of
microfinance lending organizations, would be followed.
The eligibility norms shall be deliberated and recommended by the Loan Screening
Committee of the NHFDC based on the prevailing eligibility norms of the SIDBI or NABARD.


</string>
    <string name="finance4benefits">Uniform Interest of 12.50% p.a. be prescribed for all PwDs doing away with gender based
interest rate.
Correspondingly, the rate of interest for lending by NHFDC would be 4.50% p.a. with margin
upto 8.00% for the partner agency.</string>
    <string name="finance4apply">Application in prescribed form attach with necessary documents.Ref website:
https://mahabharti.in/yojana/vishesh-microfinance-yojana/
nhfdc.nic.in



</string>
    <string name="finance4documents">Ref website:
https://mahabharti.in/yojana/vishesh-microfinance-yojana/
nhfdc.nic.in


</string>
    <string name="financescheme5">Scheme 5 </string>
    <string name="finance5name">NHFDC Swavalamban Kendra (NSK) </string>
    <string name="finance5category">Under this scheme NHFDC provides prompt and need based finance for the target group and activities at reasonable rate of interest through NBFC - MFI, Section-8-MFI, and NGO-MFI, SHG Federations, state Government Missions and other state level \

organizations to pursue small/micro business and development activities.</string>
    <string name="finance5Desc">To provide prompt and need based finance for the target group and activities at reasonable
rate of interest through NBFC- MFI, Section-8-MFI, and NGO-MFI, SHG Federations, state
Government Missions and other state level organizations to pursue small/micro business and
developmental activities.</string>
    <string name="finance5eligibility">Each NSK is established at a capital cost of around Rs. 12 lakhs by PwD entrepreneurs with the help of 100% financing from NHFDC. These NSKs will be used as mini incubation centers with hands on skilling on the locally relevant and viable businesses to train the PwDs for self-employment opportunities in and around their localities.


</string>
    <string name="finance5benefits">Uniform Interest of 12.50% p.a. be prescribed for all PwDs doing away with gender based
interest rate.
Correspondingly, the rate of interest for lending by NHFDC would be 4.50% p.a. with margin
upto 8.00% for the partner agency.</string>
    <string name="finance5apply">Application in prescribed form attach with necessary documents.Ref website:
https://mahabharti.in/yojana//
nhfdc.nic.in



</string>
    <string name="finance5documents">Ref website:
https://mahabharti.in/yojana/swavalamban-kendra-yojana/
nhfdc.nic.in


</string>
    <string name="loanscheme">Scheme 1 </string>
    <string name="loanname">Term Loan
/Education Loan
/Micro Credit Scheme
/Scheme for NGOs
/Direct Loan Scheme</string>
    <string name="loancategory">Physically Disabled
</string>
    <string name="loandesc">To undertake, carry on, assist to carry on and promote economic development activities including self employment and other ventures for benefit and economic rehabilitation of handicapped persons regardless of their religion, sex, caste and age, in collaboration with State Government Ministries/Departments, extend financial assistance/loans/concessional finance to handicapped persons for implementing economically and financially viable schemes /projects, to grant loans to the handicapped for pursuing education at graduation and higher levels, to assist in up gradation/ improvement of technical and entrepreneurial skills, to set up training, quality control, process development and other infrastructural development activities aimed to achieve economic rehabilitation/upliftment of handicapped persons, to assist other organizations engaged in rehabilitation of the handicapped by providing financial assistance, to assist businesses run by handicapped persons in procuring raw materials and marketing finished goods and to work as an Apex Institution for the State of Maharashtra for channelizing the funds received from State Finance Corporation or the Central Government</string>
    <string name="loaneligibility">1. Applicant should have minimum 40% disability
2. Applicant should be domicile in Maharashtra

</string>
    <string name="loanbenefits">This Corporation has given Business Loan to Persons with Disabilities (PWDs) in low interest rate.

</string>
    <string name="loanapply">Manually Loan form and Disbursement procedure is in process at District level through OBC corporation and online loan procedure is in process after completion then online loan procedure apply.

</string>
    <string name="loandocuments">ID proof


</string>
    <string name="educationscheme">Scheme 1 </string>
    <string name="educationname">Special education through government institute</string>
    <string name="educationcategory">
Visually impaired, hearing impaired, orthopedically handicapped</string>
    <string name="educationdesc">Special education is provided to disabled children between age group of 6 to 18 years.</string>
    <string name="educationeligibility">1. Applicant should have minimum 40% disability
2. Applicant should be domicile in Maharashtra

</string>
    <string name="pensioncategory">
All category disabled person</string>
    <string name="pensiondesc">Pension scheme</string>
    <string name="pensioneligibility">Under the schema ₹600 per month is given to each beneficiary
</string>
    <string name="pensionbenefits">A disable person in age of 18265 years and having 80% disability is eligible under the schem
        1.Under the schema ₹600 per month is given to each beneficiary
        a. He or she is entitled to
        receive ₹200 per month under the scheme. He or she also receive ₹400 per month under state sponsored Sanjay Gandhi niradhar anudan yojna

</string>
    <string name="pensionapply">A disable person in age of 18265 years and having 80% disability is eligible under the schem

        a. He or she is entitled to
        receive ₹200 per month under the scheme. He or she also receive ₹400 per month under state sponsored Sanjay Gandhi niradhar anudan yojna

</string>
    <string name="pensiondocuments">A disable person in age of 18265 years and having 80% disability is eligible under the schem

        a. He or she is entitled to
        receive ₹200 per month under the scheme. He or she also receive ₹400 per month under state sponsored Sanjay Gandhi niradhar anudan yojna

</string>
    <string
        name="financewithlink"><a href="https://sjsa.maharashtra.gov.in/en/scheme-category/disability-welfare">Tap here to open Link</a></string>
    <string
        name="loanwithlink"><a href="https://sjsa.maharashtra.gov.in/en/scheme-category/disability-welfare">Tap here to open Link</a></string>
    <string
        name="pensionwithlink"><a href="https://www.myscheme.gov.in/schemes/igndps">Tap here to open Link</a></string>
</resources>